[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golden-goose-trader"
version = "0.1.0"
description = "ML-enhanced trading bot for MT5"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}

dependencies = [
    "tensorflow>=2.8.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "MetaTrader5>=5.0.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.1.0",
    "flake8>=4.0.1",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]